# Financial-Analytics-Tool

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  md_CHANGELOG.html  md_CODE__OF__CONDUCT.html  md_CONTRIBUTING.html  md_README.html  pages.html  tree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
binding/: pybind_module.cpp
cpp_backend/apps/: cli_app.cpp
cpp_backend/benchmarks/: bench_core.cpp
cpp_backend/include/: analytics.hpp
cpp_backend/src/: analytics.cpp  analytics.cpp.cpp
cpp_backend/tests/: CMakeLists.txt  test_core.cpp
pyqt_frontend/: Pipfile  main.py  requirements.txt  setup.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js
src/: core.cpp
tests/: CMakeLists.txt  test_core.cpp
